--- a/Max Duck Hunter Reload/Max Duck Hunter Reload.csproj
+++ b/Max Duck Hunter Reload/Max Duck Hunter Reload.csproj
@@ -25,5 +25,8 @@
     <None Update="Manifest\audio.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Manifest\song.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
